--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,26 +1,26 @@
  .result-card{
-   /* height: 300px; */
-   width:  290px;
-   max-height: 300px;
-   max-width: 290px;   
-   margin:20px;
-   padding: 20px;
-   display: inline-block;
-   box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px;    
-   
+   height: 230px; 
+   width:  230px;
+   max-height: 230px;
+   max-width: 230px;   
+   margin:20px; 
+   padding: 10px;
+   box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px;  
+   display: inline-block;    
  }
 
  .result-card:hover  {
   box-shadow: rgba(0, 0, 0, 0.788) 0px 0px 16px;    
+  cursor: pointer;
  }
 
  .result-card:hover .result-image{
-  transform: scale(1.15)
+  transform: scale(1.10)
  }
 
  .result-image{ 
    width:80%;
-   max-height: 240px;
+   height: 80%;
    display: block;
    margin-left: auto;
    margin-right: auto;
@@ -28,9 +28,13 @@
  }
 
  .result-container{ 
-  width:88%;
+ 
+  width: auto;
+   max-width:80%;
+   display:block;
   margin-left: auto;
   margin-right: auto;
+   /* background-color: antiquewhite;  */
  }
 
  .result-host{
@@ -41,3 +45,5 @@
   font-size:1.2em;
   text-align: center;
  }
+
+ 
