--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
- .result-card{
+ /* .result-card{
    height: 230px; 
    width:  230px;
    max-height: 230px;
@@ -34,7 +34,7 @@
    display:block;
   margin-left: auto;
   margin-right: auto;
-   /* background-color: antiquewhite;  */
+   
  }
 
  .result-host{
@@ -44,6 +44,6 @@
   margin-right: auto; 
   font-size:1.2em;
   text-align: center;
- }
+ } */
 
  
