--- a/client/src/ListingEdit.module.css
+++ b/client/src/ListingEdit.module.css
@@ -1,12 +1,13 @@
 .root {
     display: grid;
-    grid-template-columns: .1fr 1fr 1fr .1fr;
+    grid-template-columns:  .1fr 1fr 1fr .1fr;
     grid-template-rows:  100px 400px 120px;
     grid-template-areas:
-    "leftArrow upperHost upperActions rightArrow" 
-    "leftArrow middleImage middleActions rightArrow" 
-    "leftArrow middleImage lowerActions rightArrow";
+    "left-arrow upper-host upper-actions right-arrow" 
+    "left-arrow middle-image middle-actions right-arrow" 
+    "left-arrow middle-image lower-actions right-arrow";
     background-color:gray;  
+    margin: 55px 0 0 0;
 }
 
 .btnWhiteList {
@@ -48,6 +49,7 @@
     margin: 13px 20px 0 0;
     font-size: 3em;
     border: none;  
+    background-color:transparent;
 }
 
 .btnClose:hover{cursor: pointer;}
@@ -80,8 +82,7 @@
 
 .middleImage{
     grid-area:middle-image;   
-    background-color:rgb(51, 51, 51);
-    background-color:pink;
+    background-color:rgb(51, 51, 51);    
 }
 
 .middleImage img {
@@ -115,7 +116,7 @@
     color:white;
 }
 
-button{
+.btnThree{
     height: 70px;
     width:140px;
     background-color:rgb(51, 51, 51);
@@ -129,6 +130,12 @@ button{
 } */
 
 .btnTakedown{     
+    height: 70px;
+    width:140px;
+    background-color:rgb(51, 51, 51);
+    color:gray;
+    font-size: 1em;
+    border: .5px solid gray;
     margin: 0 0 0 25px ;
     color: red;
 }
@@ -199,11 +206,11 @@ td {
 }
 
 
-.onlineCircle{
+/* .onlineCircle{
     font-size: .75em;
     color:rgb(54, 234, 123);
     margin: 0 10px 2px 0;
-}
+} */
 
 a {
     color:white;
@@ -211,8 +218,61 @@ a {
 }
 
 a:hover {
-    color:gray;
+    color:gray;     
+}
+
+.modal {
+    width: 72%;    
+    height: 600px;
+    z-index: 900;
+    position: fixed;  
+    top: 35px;  
+    left:14%;
+    border-radius: 1%;
+    padding: 0 0 0 0;
+    background-color:white;
+    color:black;
+    border: solid 1px white;
+    font-size:1.4em;     
+    padding: 0 15px 0 15px;
      
 }
 
+ 
+.modalRoot {
+    display: grid;
+    grid-template-columns:  .7fr 1fr;
+    grid-template-rows:  80px 400px;
+    grid-template-areas:
+    "modalTitle modalClose"    
+    "modalEmailSender modalEmailSender";    
+}
+
+.modalTitle{
+    grid-area:modalTitle;
+}
+
+.modalClose{
+    grid-area: modalClose;
+}
+
+.modalEmailSender{
+    grid-area: modalEmailSender
+}
+
+.modalBtnClose{
+    height: 50px;
+    width: 50px;
+    float: right;
+    margin: 0 0 0 0;
+    font-size: 3em;
+    border: none;  
+    background-color:transparent;
+    outline:none;
+    color:gray;
+}
+
+.modalBtnClose:hover{
+    cursor: pointer;
+} 
  
