--- a/client/src/HomePage.module.css
+++ b/client/src/HomePage.module.css
@@ -14,7 +14,7 @@
  cursor: pointer;
 }
 
-.resultCard:hover .result-image{
+.resultCard:hover .resultImage{
  transform: scale(1.10)
 }
 
@@ -28,17 +28,16 @@
 }
 
 .resultContainer{ 
-
  width: auto;
   max-width:80%;
   display:block;
  margin-left: auto;
  margin-right: auto;
-  /* background-color: antiquewhite;  */
+   
 }
 
 .resultHost{
- margin-top: 10px;
+ margin-top: 2px;
  width:80%;
  margin-left: auto;
  margin-right: auto; 
@@ -46,3 +45,11 @@
  text-align: center;
 }
 
+.listType{
+  margin-top: 1px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  font-size: 1.2em;
+  text-align: center;
+}
