--- a/client/src/SearchBar.module.css
+++ b/client/src/SearchBar.module.css
@@ -2,12 +2,13 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top:100px;
+    margin-top:80px;
     width:80%;
-    height:100px;   
+    height:90px;   
     box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px;     
     background-color: white;
-    padding: 5px 0 0 0 !important;
+    padding: 3px 5px 0 0 !important;
+    font-size:.95em;
 }
 
 
