--- a/client/src/HomePage.module.css
+++ b/client/src/HomePage.module.css
@@ -1,12 +1,44 @@
+
+.resultContainer{ 
+  width: auto;
+   max-width:80%;
+   display: block;
+  margin-left: auto;
+  margin-right: auto;   
+ }
+
+
 .resultCard{
-  height: 230px; 
-  width:  230px;
+  vertical-align: top;
   max-height: 230px;
   max-width: 230px;   
-  margin:20px; 
+  height: 230px;
+  margin:20px 0 0 20px !important; 
   padding: 10px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px;  
-  display: inline-block;    
+   display: inline-block;     
+  z-index: 1;
+   
+}
+
+.dead {
+  position: relative;
+}
+
+.dead::after{
+  content:"Dead URL";
+  z-index: 100;
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 30%;
+  left: 15%;
+  color: red;
+  font-size:2.5em;
+  font-weight:700;
+  /* transform: rotate(-45deg) */
+   
 }
 
 .resultCard:hover  {
@@ -24,17 +56,9 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  transition: transform .2s; 
+  transition: transform .2s;   
 }
 
-.resultContainer{ 
- width: auto;
-  max-width:80%;
-  display:block;
- margin-left: auto;
- margin-right: auto;
-   
-}
 
 .resultHost{
  margin-top: 2px;
@@ -43,13 +67,7 @@
  margin-right: auto; 
  font-size:1.2em;
  text-align: center;
+  
 }
 
-.listType{
-  margin-top: 1px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-  font-size: 1.2em;
-  text-align: center;
-}
+ 
