--- a/client/src/ListingEdit.module.css
+++ b/client/src/ListingEdit.module.css
@@ -1,6 +1,6 @@
 .root {
     display: grid;
-    grid-template-columns:  .1fr 1fr 1fr .1fr;
+    grid-template-columns:  auto 1fr 1fr auto;
     grid-template-rows:  100px 400px 120px;
     grid-template-areas:
     "left-arrow upper-host upper-actions right-arrow" 
@@ -50,9 +50,15 @@
     font-size: 3em;
     border: none;  
     background-color:transparent;
+    color: gray;
 }
 
-.btnClose:hover{cursor: pointer;}
+.btnClose:hover{    
+    cursor: pointer; 
+    color: white;
+}
+
+
 
 .upperHost{
     text-align:center;
@@ -63,6 +69,18 @@
     margin: 15px 0 1px 0;
 }
 
+.listTypeBlack{
+    color:red;
+    margin: -17px 0 0 0;
+    font-size: .6em;    
+}
+
+.listTypeWhite{
+    color:white;
+    margin: -17px 0 0 0;
+    font-size: .6em;    
+}
+
 .upperActions{
     color:white;
     grid-area:upper-actions;
@@ -70,15 +88,6 @@
     margin: 15px 0 1px 0;
 }
 
-.leftArrow{
-    grid-area:left-arrow;
-    color:white;
-    font-size: 4em;
-    padding-top: 230px;
-    display:block;
-    margin-right:auto;
-    margin-left:auto;
-}
 
 .middleImage{
     grid-area:middle-image;   
@@ -101,13 +110,45 @@
 }
 
 .rightArrow{
-    grid-area:right-arrow;
-    color:white;
-    font-size: 4em;
-    padding-top: 230px;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+    grid-area:right-arrow;    
+     
+}
+
+.btnRightArrow {
+    width:55px;
+    margin: 222px 0 0 0;
+    padding: 0 55px 0 23px;
+    height: 80px;
+    width: 40px;
+    background-color:gray;
+    border:none;
+    outline:none;
+    font-size: 4.5em;
+    color: rgb(51, 51, 51);
+}
+
+.leftArrow{
+    grid-area:left-arrow;   
+     
+}
+
+
+.btnLeftArrow:hover, .btnRightArrow:hover{
+    cursor: pointer;
+    color: white;
+}
+
+.btnLeftArrow{
+    width: 55px;
+    margin: 222px 0 0 0 ;
+    padding: 0 65px 0 10px;
+    height: 80px;
+    width: 40px;
+    background-color:gray;
+    border: none;
+    outline: none;
+    font-size: 4.5em;
+    color: rgb(51,51,51);
 }
 
 .lowerActions{
@@ -124,10 +165,7 @@
     font-size: 1em;
     border: .5px solid gray;
 }
-
-/* .btn-takedown:hover{
-    background-color:gray;
-} */
+ 
 
 .btnTakedown{     
     height: 70px;
